# optg

./: .gitignore  CMakeLists.txt  README.md
example/: optg_exported.csv
src/: OPTGConfig.h.in  block.cxx  block.h  events.cxx  events.h  optg.cxx
